extensions/wikia/LocalNavigation/styles/LocalNavigation.scss
@import 'skins/shared/mixins/arrow';
@import 'skins/shared/mixins/calc';
@import 'skins/shared/color';

.local-navigation {
	background-color: $color-page;
	box-sizing: border-box;
	height: 80px;

	*, *:before, *:after {
		box-sizing: inherit;
	}

	.contribute {
		background-color: $color-buttons;
		color: $color-button-text;
		display: inline-block;
		position: relative;
	}

	.contribute-button {
		display: table-cell;
		font-size: 12px;
		font-weight: bold;
		height: 40px;
		padding: 8px 15px 8px 20px;
		position: relative;
		text-transform: uppercase;
		vertical-align: middle;

		&:after {
			border: 5px solid;
			border-top-color: $color-button-text;
			color: transparent;
			content: ' ';
			display: inline-block;
			margin: 5px 0 0 15px;
			position: relative;
			top: 3px;
		}
	}

	.dropdown {
		display: table;
		position: absolute;
		z-index: 500050;
		left: 0;
		right: auto;

		&.right {
			left: auto;
			right: 0;
		}

		li {
			display: table-row;
			height: 51px;
			list-style: none;

			a {
				background-color: $color-buttons;
				color: $color-button-text;
				display: table-cell;
				padding: 20px;
				text-decoration: none;
				vertical-align: middle;
				white-space: nowrap;
				width: 100%;

				&:not(:first-child) {
					border-top: 1px solid rgba($color-button-text, .2);
				}

				&:hover {
					font-weight: bold;
				}

				&:after {
					content: attr(data-content);
					font-weight: bold;
					visibility: hidden;
				}

				span {
					position: absolute;
				}
			}
		}
	}
}


.local-navigation {
	a {
		color: inherit;
		&:hover {
			text-decoration: none;
		}
	}
	ul.first {
		height: 60px;
		padding-top: 20px;

		> li {
			display: block;
			float: left;
			height: 100%;
			position: relative;

			> a {
				display: block;
				font-size: 15px;
				font-weight: bold;
				height: 100%;
				line-height: 45px;
				padding: 0 20px;
			}

			&:not(:last-child) {
				border-right: 1px solid $color-page-border;
			}

			// TODO: Change it to .action when finishing interactions
			&:hover {
				background: $color-buttons;
				border-color: $color-buttons;
				color: $color-button-text;

				ul.second, ul.dropdown {
					display: block;
				}
			}
		}
	}
	ul.dropdown {
		display: none;
	}
	ul.second {
		a.has-more {
			padding-right: 40px;
			.more {
				@include arrow(4px, rgba($color-button-text, .5), 'right');
				margin-top: 1px;
				margin-right: -20px;
				position: static;
				float: right;
			}
			&:hover .more {
				@include arrow(4px, rgba($color-button-text, .8), 'right');
			}
		}
	}
}

